# advent_of_code_2021

./: Makefile  README.md  pyproject.toml
solutions/inputs/: utils.py
solutions/scripts/: day1.py  day2.py  day3.py  day4.py
